--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,18 @@
 ---
-import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import Logo from '../components/Logo.astro';
+import ThemeToggle from '../components/ThemeToggle.astro';
+import Footer from '../components/Footer.astro';
+import FullscreenImage from '../components/FullscreenImage.astro';
+import MailForm from '../components/MailForm.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import backgroundImage from '../assets/wp001.jpg';
 ---
 
 <Layout>
-	<Welcome />
+	<FullscreenImage src={backgroundImage} alt="Background image" />
+	<Logo />
+	<ThemeToggle />
+	<MailForm />
+	<Footer />
 </Layout>
