--- a/src/components/FullscreenImage.astro
+++ b/src/components/FullscreenImage.astro
@@ -6,10 +6,12 @@ const { src, alt } = Astro.props;
 
 <html class="h-full w-full">
   <body class="h-full w-full flex justify-center items-center bg-white">
-    <Image 
-      src={src} 
-      alt={alt} 
-      class="max-w-full max-h-full w-auto h-auto object-contain"
-    />
+    <div class="w-full h-full overflow-hidden">
+      <Image 
+        src={src} 
+        alt={alt} 
+        class="w-full h-full object-cover"
+      />
+    </div>
   </body>
 </html>
