--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import ThemeToggle from '../components/ThemeToggle.astro';
 import Footer from '../components/Footer.astro';
 import FullscreenImage from '../components/FullscreenImage.astro';
 import MailForm from '../components/MailForm.astro';
+import Menu from '../components/Menu.astro';
 
 import backgroundImage from '../assets/wp001.jpg';
 ---
@@ -14,5 +15,6 @@ import backgroundImage from '../assets/wp001.jpg';
 	<Logo />
 	<ThemeToggle />
 	<MailForm />
+	<Menu />
 	<Footer />
 </Layout>
