--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,5 @@
 <footer
-  class="bg-transparent text-white opacity-70 py-6 absolute bottom-0 w-full"
+  class="bg-transparent text-white py-6 px-6 opacity-70 py-6 absolute bottom-0 w-full"
 >
   <div class="container mx-auto flex justify-between items-center">
     <!-- Centered Rights Reserved Message -->
