Some tweaks to the footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@
   <div class="container mx-auto flex justify-between items-center">
     <!-- Centered Rights Reserved Message -->
     <div class="text-center flex-grow">
-      <p class="text-sm">&copy; 2025 Darius Blaszyk. All rights reserved.</p>
+      <p class="text-sm">&copy; Darius Blaszyk. All rights reserved.</p>
     </div>
 
     <!-- Social Media Icons (aligned right) -->
