--- a/src/components/MailForm.astro
+++ b/src/components/MailForm.astro
@@ -15,13 +15,7 @@ const { text } = Astro.props;
 </style>
 
 <!-- Button that triggers form display -->
-<button
-  id="mail-button"
-  type="button"
-  class="menu-item w-max px-4 py-2 text-xl font-bold uppercase tracking-wider transition-all duration-300 ease-out transform opacity-30 scale-100 hover:scale-110 hover:opacity-100 text-white text-right"
-  style={`font-family: 'Oswald', sans-serif;`}
-  onclick="toggleForm()"
->
+<button id="mail-button" type="button" class="menu-item" onclick="toggleForm()">
   {text}
 </button>
 
