--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,1 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Wire+One&display=swap");
+
 @import "tailwindcss";
+
+.font-wire {
+    font-family: "Wire One", sans-serif;
+}
+
+.font-caslon {
+    font-family: "Libre Caslon Text", serif;
+}
+
+.menu-item {
+    @apply px-4 py-2 duration-300 ease-in-out opacity-30 scale-100 
+           hover:scale-110 hover:opacity-100;
+  }
+
+body {
+    font-family: "Libre Caslon Text", serif;
+    background-color: #000;
+}
