minor tweak to styling

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -46,7 +46,7 @@ import aboutImage from '../assets/wp006.jpg';
 
 
 <Layout>
-  <main class="flex justify-center min-h-screen bg-black py-8">
+  <main class="flex justify-center min-h-screen py-8">
     <!-- Left Column (empty) -->
     <div class="column golden-column"></div>
 
