--- a/src/components/MailForm.astro
+++ b/src/components/MailForm.astro
@@ -24,7 +24,7 @@ const { text } = Astro.props;
   id="mail-form-container"
   class="fixed bottom-1/5 right-5 w-80 bg-white opacity-0 translate-y-10 rounded-lg p-4 shadow-lg transition-all duration-500 ease-in-out transform invisible"
 >
-  <p class="text-lg font-semibold text-gray-900 mb-2">Get in touch</p>
+  <p class="menu-item">Get in touch</p>
   <form id="contact-form" class="space-y-4">
     <input
       type="email"
