--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,35 +1,47 @@
 ---
-import Footer from "../components/Footer.astro";
-import Logo from "../components/Logo.astro";
-import Menu from "../components/Menu.astro";
-
+import "../styles/base.css";
 import "../styles/global.css";
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="no-js">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Darius Blaszyk | Photography</title>
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<meta name="author" content="Codrops" />
+		<link rel="icon" type="image/svg+xml" href="/logo-min.svg" />
+		<link rel="stylesheet" href="https://use.typekit.net/jyi8res.css" />
+		<script>
+			document.documentElement.className = "js";
+			var supportsCssVars = function () {
+				var e,
+					t = document.createElement("style");
+				return (
+					(t.innerHTML = "root: { --tmp-var: bold; }"),
+					document.head.appendChild(t),
+					(e = !!(
+						window.CSS &&
+						window.CSS.supports &&
+						window.CSS.supports("font-weight", "var(--tmp-var)")
+					)),
+					t.parentNode.removeChild(t),
+					e
+				);
+			};
+			supportsCssVars() ||
+				alert(
+					"Please view this demo in a modern browser that supports CSS Variables.",
+				);
+		</script>
 	</head>
-	<body>
-		<Logo />
 
+	<body class="loading">
 		<slot />
 
-		<Menu />
-		<Footer />
+		<!-- Excerpts from: Propaganda (1928) by Edward Bernays -->
+		<script type="module" src="./src/scripts/index.js"></script>
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
