--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,338 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import FullscreenImage from '../components/FullscreenImage.astro';
-
-import backgroundImage from '../assets/wp001.jpg';
+import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-	<FullscreenImage src={backgroundImage} alt="Background image" />
+	<main>
+		<div class="grid grid--large">
+			<div class="grid__cell grid__cell-c4-r2 grid__cell--padded">
+				<div class="frame">
+					<h1 class="frame__title oh">
+						<span class="oh__inner">No man's land</span>
+					</h1>
+					<nav class="frame__links">
+						<a href="" class="oh"
+							><span class="oh__inner">Article</span></a
+						>
+						<a
+							href="https://tympanus.net/Development/ParanoiaSlideshow/"
+							class="oh"
+							><span class="oh__inner">Previous demo</span></a
+						>
+						<a
+							href="https://github.com/codrops/GridZoom/"
+							class="oh"><span class="oh__inner">GitHub</span></a
+						>
+					</nav>
+				</div>
+			</div>
+			<div class="grid__cell grid__cell-c2-r2 grid__cell--padded">
+				<span class="oh"
+					><img
+						class="oh__inner"
+						src="logo-min.svg"
+						width="32"
+						height="32"
+					/></span
+				>
+				<br />
+				<span class="oh"
+					><span class="oh__inner">© Darius Blaszyk</span></span
+				>
+			</div>
+			<div class="grid__cell grid__cell-c1-r1">
+				<div class="grid__cell-img">
+					<div
+						class="grid__cell-img-inner"
+						style="background-image:url(img/wp001.jpg)"
+						data-item="item-1"
+					>
+					</div>
+				</div>
+			</div>
+			<div class="grid__cell grid__cell-c3-r1">
+				<div class="grid__cell-img">
+					<div
+						class="grid__cell-img-inner"
+						style="background-image:url(img/wp002.jpg)"
+						data-item="item-2"
+					>
+					</div>
+				</div>
+			</div>
+			<div class="grid__cell grid__cell-c4-r1">
+				<div class="grid__cell-img">
+					<div
+						class="grid__cell-img-inner"
+						style="background-image:url(img/wp003.jpg)"
+						data-item="item-3"
+					>
+					</div>
+				</div>
+			</div>
+			<div class="grid__cell grid__cell-c1-r2">
+				<div class="grid__cell-img">
+					<div
+						class="grid__cell-img-inner"
+						style="background-image:url(img/wp004.jpg)"
+						data-item="item-4"
+					>
+					</div>
+				</div>
+			</div>
+			<div class="grid__cell grid__cell-c3-r2">
+				<div class="grid__cell-img">
+					<div
+						class="grid__cell-img-inner"
+						style="background-image:url(img/wp005.jpg)"
+						data-item="item-5"
+					>
+					</div>
+				</div>
+			</div>
+			<div class="grid__cell grid__cell-c2-r3">
+				<div class="grid__cell-img">
+					<div
+						class="grid__cell-img-inner"
+						style="background-image:url(img/wp006.jpg)"
+						data-item="item-6"
+					>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="content">
+			<div class="content__item" id="item-1">
+				<span class="content__item-number oh"
+					><span class="oh__inner">01</span></span
+				>
+				<h2 class="content__item-heading oh">
+					<span class="oh__inner">Masses</span>
+				</h2>
+				<p class="content__item-text">
+					The instruments by which public opinion is organized and
+					focused may be misused. But such organization and focusing
+					are necessary to orderly life.
+				</p>
+				<a class="content__item-link oh"
+					><span class="oh__inner">View more</span></a
+				>
+				<nav class="slide-nav">
+					<div
+						class="slide-nav__img slide-nav__img--prev"
+						style="background-image:url(img/wp006.jpg);"
+					>
+					</div>
+					<div
+						class="slide-nav__img slide-nav__img--next"
+						style="background-image:url(img/wp002.jpg);"
+					>
+					</div>
+				</nav>
+			</div>
+			<div class="content__item" id="item-2">
+				<span class="content__item-number oh"
+					><span class="oh__inner">02</span></span
+				>
+				<h2 class="content__item-heading oh">
+					<span class="oh__inner">Invisible</span>
+				</h2>
+				<p class="content__item-text">
+					As civilization has become more complex, and as the need for
+					invisible government has been increas ingly demonstrated,
+					the technical means have been invented and developed by
+					which opinion may be regimented.
+				</p>
+				<a class="content__item-link oh"
+					><span class="oh__inner">View more</span></a
+				>
+				<nav class="slide-nav">
+					<div
+						class="slide-nav__img slide-nav__img--prev"
+						style="background-image:url(img/wp001.jpg);"
+					>
+					</div>
+					<div
+						class="slide-nav__img slide-nav__img--next"
+						style="background-image:url(img/wp003.jpg);"
+					>
+					</div>
+				</nav>
+			</div>
+			<div class="content__item" id="item-3">
+				<span class="content__item-number oh"
+					><span class="oh__inner">03</span></span
+				>
+				<h2 class="content__item-heading oh">
+					<span class="oh__inner">Expense</span>
+				</h2>
+				<p class="content__item-text">
+					The invisible government tends to be concentrated in the
+					hands of the few because of the expense of manipulating the
+					social machinery which controls the opinions and habits of
+					the masses.
+				</p>
+				<a class="content__item-link oh"
+					><span class="oh__inner">View more</span></a
+				>
+				<nav class="slide-nav">
+					<div
+						class="slide-nav__img slide-nav__img--prev"
+						style="background-image:url(img/wp002.jpg);"
+					>
+					</div>
+					<div
+						class="slide-nav__img slide-nav__img--next"
+						style="background-image:url(img/wp004.jpg);"
+					>
+					</div>
+				</nav>
+			</div>
+			<div class="content__item" id="item-4">
+				<span class="content__item-number oh"
+					><span class="oh__inner">04</span></span
+				>
+				<h2 class="content__item-heading oh">
+					<span class="oh__inner">Mechanism</span>
+				</h2>
+				<p class="content__item-text">
+					No matter how sophisticated, how cynical the public may
+					become about publicity methods, it must respond to the basic
+					appeals, because it will always need food, crave amusement,
+					long for beauty, respond to leadership.
+				</p>
+				<a class="content__item-link oh"
+					><span class="oh__inner">View more</span></a
+				>
+				<nav class="slide-nav">
+					<div
+						class="slide-nav__img slide-nav__img--prev"
+						style="background-image:url(img/wp003.jpg);"
+					>
+					</div>
+					<div
+						class="slide-nav__img slide-nav__img--next"
+						style="background-image:url(img/wp005.jpg);"
+					>
+					</div>
+				</nav>
+			</div>
+			<div class="content__item" id="item-5">
+				<span class="content__item-number oh"
+					><span class="oh__inner">05</span></span
+				>
+				<h2 class="content__item-heading oh">
+					<span class="oh__inner">Millions</span>
+				</h2>
+				<p class="content__item-text">
+					This practice of creating circumstances and of creating
+					pictures in the minds of millions of persons is very common.
+				</p>
+				<a class="content__item-link oh"
+					><span class="oh__inner">View more</span></a
+				>
+				<nav class="slide-nav">
+					<div
+						class="slide-nav__img slide-nav__img--prev"
+						style="background-image:url(img/wp004.jpg);"
+					>
+					</div>
+					<div
+						class="slide-nav__img slide-nav__img--next"
+						style="background-image:url(img/wp006.jpg);"
+					>
+					</div>
+				</nav>
+			</div>
+			<div class="content__item" id="item-6">
+				<span class="content__item-number oh"
+					><span class="oh__inner">06</span></span
+				>
+				<h2 class="content__item-heading oh">
+					<span class="oh__inner">Continuous</span>
+				</h2>
+				<p class="content__item-text">
+					The important thing is that it is universal and continuous;
+					and in its sum total it is regimenting the public mind every
+					bit as much as an army regiments the bodies of its soldiers.
+				</p>
+				<a class="content__item-link oh"
+					><span class="oh__inner">View more</span></a
+				>
+				<nav class="slide-nav">
+					<div
+						class="slide-nav__img slide-nav__img--prev"
+						style="background-image:url(img/wp005.jpg);"
+					>
+					</div>
+					<div
+						class="slide-nav__img slide-nav__img--next"
+						style="background-image:url(img/wp001.jpg);"
+					>
+					</div>
+				</nav>
+			</div>
+			<button class="back">
+				<svg viewBox="0 0 50 9" width="100%"
+					><path d="M0 4.5l5-3M0 4.5l5 3M50 4.5h-77"></path></svg
+				>
+			</button>
+			<nav class="grid grid--mini">
+				<div class="grid__cell grid__cell-c1-r1">
+					<div class="grid__cell-img">
+						<div
+							class="grid__cell-img-inner"
+							style="background-image:url(img/wp001.jpg)"
+						>
+						</div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c3-r1">
+					<div class="grid__cell-img">
+						<div
+							class="grid__cell-img-inner"
+							style="background-image:url(img/wp002.jpg)"
+						>
+						</div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c4-r1">
+					<div class="grid__cell-img">
+						<div
+							class="grid__cell-img-inner"
+							style="background-image:url(img/wp003.jpg)"
+						>
+						</div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c1-r2">
+					<div class="grid__cell-img">
+						<div
+							class="grid__cell-img-inner"
+							style="background-image:url(img/wp004.jpg)"
+						>
+						</div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c3-r2">
+					<div class="grid__cell-img">
+						<div
+							class="grid__cell-img-inner"
+							style="background-image:url(img/wp005.jpg)"
+						>
+						</div>
+					</div>
+				</div>
+				<div class="grid__cell grid__cell-c2-r3">
+					<div class="grid__cell-img">
+						<div
+							class="grid__cell-img-inner"
+							style="background-image:url(img/wp006.jpg)"
+						>
+						</div>
+					</div>
+				</div>
+			</nav>
+		</div>
+	</main>
 </Layout>
