--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap');
+
+body {
+    font-family: "Cormorant Garamond", serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 16pt;
+}
+
 *,
 *::after,
 *::before {
@@ -16,8 +26,6 @@ body {
   --color-link-hover: #000;
   color: var(--color-text);
   background-color: var(--color-bg);
-  font-family: rustica, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica,
-    Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
