change page title and sub title and way of contact

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import Layout from '../layouts/Layout.astro'
 import { photos } from '../photos'
 ---
 
-<Layout title="Astro + View Transitions Photo Gallery">
+<Layout title="Darius Blaszyk | Photography">
   <main>
     <div class="grid grid--large">
       <div class="grid__cell grid__cell--padded">
@@ -14,18 +14,13 @@ import { photos } from '../photos'
             <span class="oh__inner">No man's land</span>
           </h1>
           <nav class="frame__links">
-            <a
-              href="https://github.com/Charca/astro-photo-gallery"
-              class="oh"
-              target="_blank"
-              rel="noopener"><span class="oh__inner">Source code</span></a
-            >
+            <span class="oh__inner">Where nature takes back what’s hers.</span>
             <div>
-              Original demo by <a
-                href="https://twitter.com/codrops"
+              by <a
+                href="mailto:dhkblaszyk@gmail.com"
                 class="oh"
                 target="_blank"
-                rel="noopener"><span class="oh__inner">@codrops</span></a
+                rel="noopener"><span class="oh__inner">Darius Blaszyk</span></a
               >
             </div>
           </nav>
