Tweak the title a little bit

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import { photos } from '../photos'
             <span class="oh__inner">No man's land</span>
           </h1>
           <nav class="frame__links">
-            <span class="oh__inner">Where nature takes back what’s hers.</span>
+            <span class="oh__inner">Where nature reclaims what’s hers.</span>
             <div>
               by <a
                 href="mailto:dhkblaszyk@gmail.com"
