add icon to index page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,9 @@ import { photos } from '../photos'
       <div class="grid__cell grid__cell--padded">
         <div class="frame">
           <h1 class="frame__title oh">
+            <img src="/favicon.svg" width="32px"/>
+            <br>
+            <br>
             <span class="oh__inner">No man's land</span>
           </h1>
           <nav class="frame__links">
