--- a/src/css/base.css
+++ b/src/css/base.css
@@ -33,6 +33,10 @@ body {
   line-height: 1;
 }
 
+strong {
+  font-weight: 700;
+}
+
 a {
   text-decoration: none;
   color: var(--color-link);
@@ -389,6 +393,7 @@ a:focus-visible {
 
   .slide-nav__main-img {
     border-radius: 18px;
+    max-height: 60vh; 
   }
 }
 
@@ -403,4 +408,8 @@ a:focus-visible {
 
 .grid--large .grid__cell-img:hover {
   scale: 0.9;
+}
+
+.logo {
+  margin: 12px;
 }
