add basic styling to the logo

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import { photos } from '../photos'
       <div class="grid__cell grid__cell--padded">
         <div class="frame">
           <h1 class="frame__title oh">
-            <img src="/favicon.svg" width="32px"/>
+            <img src="/favicon.svg" width="32px" style="margin-top: 6px;margin-left: 6px;"/>
             <br>
             <br>
             <span class="oh__inner">No man's land</span>
