--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,28 +1,16 @@
 ---
-import { ClientRouter } from "astro:transitions";
-import '../css/base.css';
-import '../css/transitions.css';
-
-interface Props {
-  title: string
-}
-
-const { title } = Astro.props
+import "../styles/global.css";
 ---
 
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="description" content="Astro description" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
-    <ClientRouter />
-    <script src="../scripts/transitions.ts"></script>
-  </head>
-  <body>
-    <slot />
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Darius Blaszyk</title>
+		<script src="https://cdn.tailwindcss.com"></script>
+	</head>
+	<body class="flex flex-col min-h-screen bg-gray-100">
+		<slot />
+	</body>
 </html>
