--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,8 +7,8 @@ import "../styles/global.css";
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Darius Blaszyk</title>
-		<script src="https://cdn.tailwindcss.com"></script>
+		<title>Darius Blaszyk | Photographer</title>
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />		
 	</head>
 	<body class="flex flex-col min-h-screen bg-gray-100">
 		<slot />
