--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,8 @@
 ---
 import "../styles/global.css";
+
+import Footer from "../components/Footer.astro";
+import Menu from "../components/Menu.astro";
 ---
 
 <!doctype html>
@@ -11,6 +14,10 @@ import "../styles/global.css";
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />		
 	</head>
 	<body class="flex flex-col min-h-screen bg-gray-100">
+		<Menu />
+
 		<slot />
-	</body>
+
+		<Footer />
+	</body>	
 </html>
