--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -7,9 +7,9 @@
             ☰
         </button>
         <div id="navbar-menu" class="hidden md:flex space-x-6 text-lg">
-            <a href="about.html" class="hover:underline">About</a>
-            <a href="work.html" class="hover:underline">Work</a>
-            <a href="store.html" class="hover:underline">Store</a>
+            <a href="about" class="hover:underline">About</a>
+            <a href="work" class="hover:underline">Work</a>
+            <a href="store" class="hover:underline">Store</a>
         </div>
     </div>
 </nav>
