--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -1,15 +1,15 @@
 <nav class="p-4">
     <div class="container mx-auto flex items-center justify-between">
-        <a href="http://www.dariusblaszyk.com">
+        <a href="/">
             <img src="/favicon.svg" alt="Logo" class="h-8" />
         </a>
         <button id="menu-toggle" class="block md:hidden text-gray-700">
             ☰
         </button>
         <div id="navbar-menu" class="hidden md:flex space-x-6 text-lg">
-            <a href="about" class="hover:underline">About</a>
-            <a href="work" class="hover:underline">Work</a>
-            <a href="store" class="hover:underline">Store</a>
+            <a href="/about" class="hover:underline">About</a>
+            <a href="/work" class="hover:underline">Work</a>
+            <a href="/store" class="hover:underline">Store</a>
         </div>
     </div>
 </nav>
