added styling to font on all pages added work page

--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -6,7 +6,7 @@
         <button id="menu-toggle" class="block md:hidden text-gray-700">
             ☰
         </button>
-        <div id="navbar-menu" class="hidden md:flex space-x-6 text-lg">
+        <div id="navbar-menu" class="hidden md:flex space-x-6 text-2xl">
             <a href="/about" class="hover:underline">About</a>
             <a href="/work" class="hover:underline">Work</a>
             <a href="/store" class="hover:underline">Store</a>
